toList() method updated in accordance to java 8.